--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
     </head>
 
     <body>
-        <header>
+        <header id="header">
             WAKABA
-            <nav>
+            <nav class="nav-1">
                 About Us
                 Contact
             </nav>
         </header>
 
         <main>
-            <div>
+            <div id="mainvisual">
+                <img src="images/salad-ge08a52cff_1920.png" alt="main">
+            </div>
+
+            <div class="catchphrase">
                 いつでもそばに
                 <BR>
                 美味しい野菜を
             </div>
             <div>
-                <div><img src="images/tomatoes-g569523ec7_1920.png"></div>
-                <div>
+                <div class="img-1"><img src="images/tomatoes-g569523ec7_1920.png"></div>
+                <div class="title-1">
                     取れたての新鮮な野菜
                 </div>
-                <div>
+                <div class="contents">
                     WAKABAはいつでも取れたての新鮮な野菜を配送。
                     だから届いてもすぐにおいしく、生のままでも食べることが出来ます。
                     <BR>
@@ -42,8 +46,8 @@
                 </div>
         </main>
 
-        <footer>
-            <p>WAKABA</p>
-<p>© 2022 WAKABA All rights reserved.</p>
+        <footer id="footer">
+            <p class="name-1">WAKABA</p>
+<p class="copyright">© 2022 WAKABA All rights reserved.</p>
         </footer>
     </body>
