ボタンとフッターのCSS

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     　自由に調理するもよし、そのまま食べるもよし。
                     野菜をふんだんに取り入れた生活で、健康な毎日を。
                 </div>
+
+            <div id="btn">
+                <div class="btn-1">
+                    ご購入はこちら
+                </div>
+
+                <div class="btn-2">
+                    詳しく見る
+                </div>
+            </div>
         </main>
 
         <footer id="footer">
