--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <header id="header">
             WAKABA
             <nav class="nav-1">
-                About Us
-                Contact
+                <ul>
+                    <li>About Us</li>
+                    <li>Contact</li>
+                </ul>
             </nav>
         </header>
 
