大体のデザイン完了、これから微調整

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header id="header">
             WAKABA
             <nav class="nav-1">
-                <ul>
+                <ul class="list-1">
                     <li>About Us</li>
                     <li>Contact</li>
                 </ul>
@@ -24,16 +24,18 @@
             </div>
 
             <div class="catchphrase">
-                いつでもそばに
-                <BR>
-                美味しい野菜を
+                <h2 class="catchphrase-1">いつでもそばに</h2>
+            
+                <h2 class="catchphrase-2">美味しい野菜を</h2>
             </div>
-            <div>
+            <div id="main-contents">
                 <div class="img-1"><img src="images/tomatoes-g569523ec7_1920.png"></div>
-                <div class="title-1">
-                    取れたての新鮮な野菜
-                </div>
+                
                 <div class="contents">
+                    <div class="title-1">
+                        取れたての新鮮な野菜
+                    </div>
+                    <BR>
                     WAKABAはいつでも取れたての新鮮な野菜を配送。
                     だから届いてもすぐにおいしく、生のままでも食べることが出来ます。
                     <BR>
@@ -46,6 +48,7 @@
                     　自由に調理するもよし、そのまま食べるもよし。
                     野菜をふんだんに取り入れた生活で、健康な毎日を。
                 </div>
+            </div>
 
             <div id="btn">
                 <div class="btn-1">
