6/15一コマ目までやったところ

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <header id="header">
-            WAKABA
+            <p class="site-title">WAKABA</p>
             <nav class="nav-1">
                 <ul class="list-1">
                     <li>About Us</li>
